# interpreter-scratch

./: .flake8  .pre-commit-config.yaml  pyproject.toml
pinterpret/: ast.py  common.py  environment.py  evaluator.py  lexer.py  obj.py  parser.py  prompt.py  token.py  utils.py
tests/: consts.py  test_evaluator.py  test_lexer.py  test_parser.py  test_token.py
